[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/sprites/starry_background.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/PressStart2P.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/fonts/16bfZX.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/sprites/buttons/generic_button.png" type="Texture" id=4]
[ext_resource path="res://scenes/end.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="Node" type="Node"]
script = ExtResource( 5 )

[node name="BG" type="Sprite" parent="."]
position = Vector2( 240, 135 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Center0" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="V0" type="VBoxContainer" parent="Center0"]
margin_left = 88.0
margin_top = 17.0
margin_right = 392.0
margin_bottom = 252.0

[node name="C1" type="CenterContainer" parent="Center0/V0"]
margin_right = 304.0
margin_bottom = 16.0

[node name="Header" type="Label" parent="Center0/V0/C1"]
margin_left = 80.0
margin_right = 224.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 1 )
text = "Game Over"

[node name="C2" type="CenterContainer" parent="Center0/V0"]
margin_top = 20.0
margin_right = 304.0
margin_bottom = 143.0

[node name="msg" type="Label" parent="Center0/V0/C2"]
margin_right = 304.0
margin_bottom = 123.0
custom_fonts/font = SubResource( 2 )
text = "Everybody died.

Number of relationships formed: 1,000,000,000,000
Number of hears broken: 1,000,000,000,000
Number of citizen births: 1,000,000,000,000
Number of citizen natural deaths: 1,000,000,000,000
Number of asteroids destroyed: 500
Number of citizens destroyed: 1,000,000,000,000
Score: 500"

[node name="C5" type="CenterContainer" parent="Center0/V0"]
margin_top = 147.0
margin_right = 304.0
margin_bottom = 189.0

[node name="Restart" type="TextureButton" parent="Center0/V0/C5"]
margin_left = 80.0
margin_right = 224.0
margin_bottom = 42.0
texture_normal = ExtResource( 4 )

[node name="Label" type="Label" parent="Center0/V0/C5/Restart"]
margin_left = 20.0
margin_top = -7.0
margin_right = 132.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 1 )
text = "
Restart"
align = 1
valign = 1

[node name="C6" type="CenterContainer" parent="Center0/V0"]
margin_top = 193.0
margin_right = 304.0
margin_bottom = 235.0

[node name="Home" type="TextureButton" parent="Center0/V0/C6"]
margin_left = 80.0
margin_right = 224.0
margin_bottom = 42.0
texture_normal = ExtResource( 4 )

[node name="Label" type="Label" parent="Center0/V0/C6/Home"]
margin_left = 40.0
margin_top = -7.0
margin_right = 104.0
margin_bottom = 28.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "
Home"
valign = 1

[connection signal="pressed" from="Center0/V0/C5/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Center0/V0/C6/Home" to="." method="_on_Home_pressed"]
